<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课堂签到</string>
    <string name="action_settings">Settings</string>
    <string name="study">好好学习，天天向上</string>
    <string name="login_user">请输入用户名：</string>
    <string name="login_pwd">请输入密码：</string>
    <string name="login">登录</string>
    <string name="rem_pwd">记住密码</string>
    <string name="reg_user">请输入用户名：</string>
    <string name="pwd">请输入原密码：</string>
    <string name="reg_pwd">请输入新密码：</string>
    <string name="reg_pwds">请再次输入新密码：</string>
    <string name="modfiy">修改密码</string>
    <string name="sign">扫一扫签到</string>
    <string name="classSign">课堂签到</string>
    <string name="clear">清空</string>
    <string name="setting">设置</string>
    
     <string name="student">学生</string>
      <string name="teacher">教师</string>
       <string name="picDescription">this is a picture</string>
       <string name="generate">点击生成二维码</string>
      <string name="scanResult">扫描结果:</string>
        <string name="exitLogin">退出登录</string>
      

    <drawable name="clr_normal">#FFFF00</drawable>
    <drawable name="clr_pressed">#75e067</drawable>

</resources>