<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/topname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/classSign"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:contentDescription="@string/picDescription" />

    <EditText
        android:id="@+id/et_login_user"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/txtborder"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/login_user"
        android:maxLength="30"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHighlight="#7e4d84" />

    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/txtborder"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/login_pwd"
        android:inputType="textPassword"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:layout_marginTop="15dp"
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:checked="true"
            android:id="@+id/rb_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/rb_teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teacher" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_ischeck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/rem_pwd" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:gravity="center"
            android:text="@string/login" >
        </Button>
    </LinearLayout>

</LinearLayout>