<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >



    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/txtborder"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/pwd"
        android:paddingRight="2dp"
        android:password="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_reg_pwd"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/txtborder"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/reg_pwd"
        android:paddingRight="2dp"
        android:password="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_reg_pwds"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/txtborder"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/reg_pwds"
        android:paddingRight="2dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/reg"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:gravity="center"
            android:text="@string/modfiy" />

        <Button
            android:layout_marginLeft="15dp"
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>