<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >


<TextView
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
     android:id="@+id/tv_teacher"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    />  


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:background="@drawable/btn_sign"
            android:id="@+id/btn_add_qrcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/generate" />

       
    </LinearLayout>

    <ImageView
        android:contentDescription="@string/picDescription"
        android:id="@+id/iv_qr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />
    
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_exit_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_exit"
            android:text="@string/exitLogin" />

    </RelativeLayout>

</LinearLayout>